<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HyperChess</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_forfeit">Forfeit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play Offline</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="game_name">HyperChess</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="title_activity_designer">DesignerActivity</string>
    <string name="piece_name_hint">Piece Name...</string>
    <string name="health">Health</string>
    <string name="range">Range</string>
    <string name="reset">Reset</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="forfeit_game">Forfeit Game</string>

</resources>
