<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="hyperchessab.hyperchess.Piece1Fragment"
    android:background="@color/MainLighter"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/Piece1Fragment_designerview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:layout_marginBottom="10dp"
        android:paddingRight="1dp"
        android:background="@drawable/test">
        <hyperchessab.hyperchess.DesignerView
            android:id="@+id/Piece1Fragment_designerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/Piece1Fragment_designerview_container"
        android:paddingBottom="2dp"
        android:paddingRight="1dp"
        android:background="@drawable/test">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/TileColor">
        <TextView
            android:id="@+id/Piece1Fragment_healthtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/health"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/Piece1Fragment_resetbtn"
            android:gravity="center_vertical"/>

        <Spinner
            android:id="@+id/Piece1Fragment_lifeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Piece1Fragment_resetbtn"
            android:layout_toRightOf="@+id/Piece1Fragment_healthtxt"
            android:layout_toEndOf="@+id/Piece1Fragment_healthtxt"
            />

        <TextView
            android:id="@+id/Piece1Fragment_rangetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/range"
            android:layout_above="@+id/Piece1Fragment_resetbtn"
            android:layout_toLeftOf="@+id/Piece1Fragment_rangeSpinner"
            android:layout_toStartOf="@id/Piece1Fragment_rangeSpinner"
            android:gravity="center_vertical"/>

        <Spinner
            android:id="@+id/Piece1Fragment_rangeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Piece1Fragment_resetbtn"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>


        <LinearLayout
            android:id="@+id/Piece1Fragment_budget_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menu_container_shape">

        </LinearLayout>

        <Button
            android:id="@+id/Piece1Fragment_resetbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_alignParentBottom="true"
            android:background="@drawable/menu_button_designerbottomleft"
            android:layout_marginLeft="2dp"/>



        <Button
            android:id="@+id/Piece1Fragment_finishbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Finish"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/Piece1Fragment_lifeSpinner"
            android:layout_marginRight="2dp"
            android:background="@drawable/menu_button_designerbottomright"/>
        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>
